[package]
name = "crawler-schema"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
schemars = "1"
tera = "1"
thiserror = "2"
regex = "1"

[[bin]]
name = "generate_schema"
path = "src/bin/generate_schema.rs"

[lib]
name = "crawler_schema"
path = "src/lib.rs"
